<resources>
    <string name="app_name">Wire Table</string>
    <string name="who_are_you">Who are you???</string>
    <string name="i_am">I am</string>
    <string name="you_want_to">You want to</string>
    <string name="borrow">借用</string>
    <string name="back">歸還</string>
    <string name="search">查詢</string>
    <string name="date">日期</string>
    <string name="user_name">姓名</string>
    <string name="borrow_item">借用項目</string>
    <string name="return_item">歸還項目</string>
    <string name="submit">提交</string>
    <string name="txt_index">編號：</string>
    <string name="txt_classification">品項：</string>
    <string name="txt_user">使用者：</string>
    <string name="txt_date">日期：</string>
    <string name="txt_status">狀態：</string>
    <string name="status_return">已歸還</string>
    <string name="status_borrow">已借用</string>
    <string name="dialog_title_error">錯誤</string>
    <string name="dialog_title_inform">通知</string>
    <string name="dialog_message_borrow_success">已成功借用!</string>
    <string name="dialog_message_return_success">已成功歸還!</string>
    <string name="dialog_message_no_data">尚未選擇項目</string>
    <string name="dialog_button_check">確定</string>
    <string name="dialog_message_return_user_error">不是你借用的\n不可以幫別人歸還!!!!</string>

    <string-array name="search_type">
        <item>品項</item>
        <item>使用者</item>
        <item>狀態</item>
    </string-array>



</resources>
